--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
   <title>FrontEndGestionCurricular</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/png" href="assets/images/Logo-Universidad-del-Cauca-vertical-1.png">
+  <link rel="icon" type="image/svg+xml" href="assets/icons/favicon-uc.svg">
+  <link rel="alternate icon" type="image/png" href="assets/images/Logo-Universidad-del-Cauca-vertical-1.png">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
