refactor: implementar el Sistema de Diseño TIC en la interfaz
- Se actualizó el título de la aplicación en `index.html` para reflejar el nombre oficial.
- Se añadieron variables de color institucional en `styles.css` y se aplicaron en varios componentes para mantener la consistencia visual.
- Se ajustaron los estilos de los botones, tablas, notificaciones y otros elementos de la interfaz para alinearse con el Sistema de Diseño TIC de la Universidad del Cauca.
- Se mejoraron los estilos del footer, header y sidebar para utilizar las nuevas variables de color y tipografía institucional.

--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <title>FrontEndGestionCurricular</title>
+  <title>Sistema de Gestión Curricular - Universidad del Cauca</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="assets/images/Logo-Universidad-del-Cauca-vertical-1.png">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+  <!-- Tipografías institucionales según Sistema de Diseño TIC -->
+  <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;600;700&family=Open+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body class="mat-typography">
